<resources>
    <string name="app_name">Proyecto-Campoverde Brandon</string>
    <!--Menu-->
    <string name="menu_subrayado" translatable="false"><u>Menú</u></string>
    <!--Toolbar-->
    <string name="supermercados" translatable="false">Supermercados</string>
    <string name="rodriguez" translatable="false">Rodríguez</string>
    <!--Inicio-->
    <string name="unionnombrelocal" translatable="false">Supermercados Rodríguez</string>
    <string name="promociones" translatable="false">Promociones de la semana</string>
    <!--Contactanos-->
    <string name="contactanos" translatable="false">Contactanos</string>
    <string name="nombre" translatable="false">Nombre</string>
    <string name="hint_nomnre" translatable="false">Ej.Brandon Campoverde</string>
    <string name="telefono" translatable="false">Teléfono</string>
    <string name="hint_telefono" translatable="false">Ej.0999999999</string>
    <string name="correo" translatable="false">Correo</string>
    <string name="hint_correo" translatable="false">Ej.ejemplo@mail.com</string>
    <string name="mensaje" translatable="false">Mensaje</string>
    <string name="hint_mensaje" translatable="false">Escribe tu mensaje aquí</string>
    <string name="enviar" translatable="false">Enviar</string>
    <!--Agradecimiento-->
    <string name="aceptar" translatable="false">Aceptar</string>
    <!--Locales-->
    <string name="quito" translatable="false">Quito</string>
    <string name="guayaquil" translatable="false">Guayaquil</string>
    <string name="cuenca" translatable="false">Cuenca</string>
    <!--Productos-->
    <string name="categorias" translatable="false">Categorias</string>
    <string name="comprar" translatable="false">Comprar</string>
    <string name="dolar" translatable="false">$</string>
    <!--Inicio de Sesión-->
    <string name="login" translatable="false">Iniciar Sesión</string>
    <string name="logout" translatable="false">Cerrar Sesión</string>
    <!--Carrito-->
    <string name="cancelar" translatable="false">Cancelar</string>
    <string name="pagar" translatable="false">Pagar</string>
    <string name="nombreprod" translatable="false">Nombre Producto</string>
    <string name="numprod" translatable="false">Num. Productos</string>
    <string name="precio" translatable="false">Precio</string>
</resources>