<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Contactanos"
    android:id="@+id/dl_contactanos"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fondo">

            <TextView
                android:id="@+id/txtBottom"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:background="@color/red"
                android:backgroundTint="@color/red"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtformulario"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/txtContactanos"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@color/red"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/supermercados"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/txtContactanos"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.194"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.277" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="92dp"
                android:text="@string/rodriguez"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/txtContactanos"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.244"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                app:layout_constraintVertical_bias="0.0" />

            <ImageButton
                android:id="@+id/btn_menu_contactanos"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:backgroundTint="@color/red"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="@id/txtContactanos"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_h_menu"
                app:tint="@color/white"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/txtContactanos"
                app:layout_constraintStart_toEndOf="@+id/btn_menu_contactanos"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/txtTituloContactanos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contactanos"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtContactanos" />

            <TextView
                android:id="@+id/txtformulario"
                android:layout_width="350dp"
                android:layout_height="580dp"
                android:layout_marginTop="24dp"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTituloContactanos" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/nombre"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/txtformulario"
                app:layout_constraintTop_toTopOf="@+id/txtformulario" />

            <EditText
                android:id="@+id/et_nombre_cont"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:hint="@string/hint_nomnre"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="@+id/txtformulario"
                app:layout_constraintHorizontal_bias="0.24"
                app:layout_constraintStart_toStartOf="@+id/txtformulario"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:text="@string/telefono"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/txtformulario"
                app:layout_constraintTop_toBottomOf="@+id/et_nombre_cont" />

            <EditText
                android:id="@+id/et_telefono_cont"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:hint="@string/hint_telefono"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="@+id/txtformulario"
                app:layout_constraintHorizontal_bias="0.24"
                app:layout_constraintStart_toStartOf="@+id/txtformulario"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:text="@string/correo"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/txtformulario"
                app:layout_constraintTop_toBottomOf="@+id/et_telefono_cont" />

            <EditText
                android:id="@+id/et_correo_cont"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:hint="@string/hint_correo"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="@+id/txtformulario"
                app:layout_constraintHorizontal_bias="0.24"
                app:layout_constraintStart_toStartOf="@+id/txtformulario"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:text="@string/mensaje"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/txtformulario"
                app:layout_constraintTop_toBottomOf="@+id/et_correo_cont" />

            <EditText
                android:id="@+id/et_mensaje_cont"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:hint="@string/hint_mensaje"
                android:inputType="text|textMultiLine"
                app:layout_constraintEnd_toEndOf="@+id/txtformulario"
                app:layout_constraintHorizontal_bias="0.24"
                app:layout_constraintStart_toStartOf="@+id/txtformulario"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <Button
                android:id="@+id/btn_enviar_cont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red"
                android:text="@string/enviar"
                app:layout_constraintBottom_toBottomOf="@+id/txtformulario"
                app:layout_constraintEnd_toEndOf="@+id/txtformulario"
                app:layout_constraintHorizontal_bias="0.488"
                app:layout_constraintStart_toStartOf="@+id/txtformulario"
                app:layout_constraintTop_toBottomOf="@+id/et_mensaje_cont" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_contactanos"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:visibility="visible"
        app:headerLayout="@layout/nav_header_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_navegacion" />

</androidx.drawerlayout.widget.DrawerLayout>